# tiny-torch

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  tensor.py
core/: activations.py  autograd.py  functions.py  graph.py  layer.py  layers.py  loader.py  losses.py  optimizer.py  tensor.py  utils.py
core/autograd/: __init__.py  activations.py  arithmetic.py  autograd.py  base.py  losses.py
core/dataset/: __init__.py  dataset.py
core/load/: loader.py  utils.py
core/loader/: __init__.py  loader.py  transformation.py
core/training/: __init__.py  schedulers.py  trainer.py
examples/: linear_regression.py  regression.py
examples/linear_regression/: README.md  WIL.md  linear_regression.py
examples/linear_regression/cubic/: cubic.py
examples/linear_regression/diabetes/: main.ipynb
examples/linear_regression/linear/: README.md  linear.py
examples/linear_regression/linear-ill-cond/: README.md  main.ipynb
examples/linear_regression/quadratic/: README.md  quadratic.py
examples/linear_regression/simple/: linear_regression.py  simple.py
