[project]
name = "tiny-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "matplotlib>=3.11.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.ty.environment]
python = "./.venv"
